--- a/themes/hugo-theme-relearn/layouts/partials/custom-header.html
+++ b/themes/hugo-theme-relearn/layouts/partials/custom-header.html
@@ -3,3 +3,5 @@
    /* Custom css */
 </style>
 -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2927010945389974"
+     crossorigin="anonymous"></script>
