--- a/themes/hugo-theme-relearn/layouts/partials/custom-footer.html
+++ b/themes/hugo-theme-relearn/layouts/partials/custom-footer.html
@@ -3,3 +3,6 @@
   console.log("running some javascript");
 </script>
 -->
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<span id="busuanzi_container_site_pv">本站总访问量 <span id="busuanzi_value_site_pv"></span> 次 · </span>
+<span id="busuanzi_container_site_uv">您是本站第 <span id="busuanzi_value_site_uv"></span> 位访问者</span>
