--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -3,4 +3,5 @@
   console.log("running some javascript");
 </script>
 -->
-
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"3Jh9XF56OMu5x31r",ck:"3Jh9XF56OMu5x31r"})</script>
